@@ -11,3 +11,4 @@
                                     - fixed unresolved reference self.webFile: need to reference a local variable
 06/03/2015 - 1.3   - Thomas LEVEIL  - check Python version to be minimum 2.7
 19/03/2015 - 1.3.1 - Fenix          - fixed exception catching order (IOError before Exception)
+05/06/2015 - 1.5   - Fenix          - removed python 2.7 version check (B3 does not support python version prior than 2.7)
